unpackaged/main/default/objects/OpportunityContactRole/fields/Account_s_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_s_Billing_Address__c</fullName>
    <description>Denotes address of billing contact</description>
    <inlineHelpText>Denotes address of billing contact</inlineHelpText>
    <label>Account&#39;s Billing Address</label>
    <type>TextArea</type>
</CustomField>