unpackaged/main/default/objects/OpportunityContactRole/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <description>For Customer’s Department or other C/O details required</description>
    <inlineHelpText>For Customer’s Department or other C/O details required</inlineHelpText>
    <label>Attention</label>
    <type>TextArea</type>
</CustomField>