unpackaged/main/default/objects/OpportunityContactRole/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Denotes details of the split which can be by project/product</description>
    <inlineHelpText>For split details per invoice</inlineHelpText>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>