unpackaged/main/default/objects/OpportunityContactRole/validationRules/Remarks_and_attention_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_and_attention_editable</fullName>
    <active>true</active>
    <description>Remarks and attention should be editable only when oppty is not in Closed Lost/Closed Won</description>
    <errorConditionFormula>AND( OR(TEXT(Opportunity.StageName)=&#39;Closed Won&#39;,
	 TEXT(Opportunity.StageName)=&#39;Closed Lost&#39;),
	OR(	ISCHANGED(Remarks__c),
		ISCHANGED(Attention__c)))</errorConditionFormula>
    <errorMessage>You do not have Access to update remarks and attention</errorMessage>
</ValidationRule>