unpackaged/main/default/objects/OpportunityContactRole/validationRules/Role_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(TEXT(Role)), ISBLANK(TEXT(Role)) )</errorConditionFormula>
    <errorMessage>Role is mandatory</errorMessage>
</ValidationRule>